--- a/week-2/pNp InroductionToHtml/index.html
+++ b/week-2/pNp InroductionToHtml/index.html
@@ -14,9 +14,9 @@
     </div>
     <div> <!--block-->
         <h2>Hyper links to external website</h2> <!--block-->
-        <a href="www.bryanuniversity.edu">Bryan University</a> <!--inline-->
-        <a href="www.google.com">link to google</a>
-        <a href="www.facebook.com">link to facebook</a>
+        <a href="https://bryanuniversity.edu">Bryan University</a> <!--inline-->
+        <a href="https://www.google.com">link to google</a>
+        <a href="https://www.facebook.com">link to facebook</a>
 
     </div>
     <div> <!--block-->
