--- a/week-7/capstone project/products.html
+++ b/week-7/capstone project/products.html
@@ -45,7 +45,7 @@
                 <h3 class="my-2">Produce</h3>
                 <nav>
                     <ul>
-                        <li><a href="#"></a>Celery</li>
+                        <li><a class="text-primary" href="#"></a>Celery</li>
                         <li><a href="#"></a>Chard</li>
                         <li><a href="#"></a>Mushroom</li>
                     </ul>
@@ -70,6 +70,41 @@
                 </nav>
 
             </div>
+            <div class="card">
+                <h2>Carrot</h2>
+                <p>It is a vegetable that can be eaten in many different ways: raw, cooked, 
+                    fried or steamed. Its characteristic orange color is due to the presence of carotenoids, 
+                    including pro-vitamin A, an antioxidant compound that is converted into vitamin A which in turn is used by the eyes once it enters our body. 
+                   </p>
+                    <div class="alret alert-success">
+
+                        <i class="fas fa-info"></i> It is also a source for vitamin E and B. 
+                        Regarding minerals, the emphasis goes to its contribution of potassium, 
+                        and discrete amounts of phosphorus, 
+                        magnesium, iodine and calcium.
+                    </div>
+
+                    <h3>Artichoke</h3>
+
+                    <p>The artichoke is mainly used for digestive disorders,
+                         especially those linked to the liver and bladder, including indigestion, 
+                         constipation and intolerance to fatty foods. It is also useful to treat nausea, 
+                         bloating and flatulence. Flavonoids, supported by acids and potassium salts also act as diuretics, 
+                         alleviating renal disorders.</p>
+                        <a href="#" class="btn btn-primary">Install Fancy app</a>
+                        <h3>Requirement</h3>
+                        <ul>
+                            <li>Windows 10, Mac OXS, linux</li>
+                            <li>Node.js v12 or higher</li>
+                        </ul>
+                        <h3>Install</h3>
+                        <p>Mac (Homebrew)</p>
+                        <pre><code>$ brew install Facny app</code></pre>
+                        <p>Npm</p>
+                        <pre><code>$ npm install Facny app</code></pre>
+                        <p>Yarn</p>
+                        <pre><code>$ yarn install Facny app</code></pre>
+            </div>
         </div>
     </section>
 
@@ -85,7 +120,6 @@
                 <ul>
                     <li><a href="home.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact Us</li>
                     <li><a href="products.html">Products</a></li>
                 </ul>
             </nav>
