Just made some minor changes

--- a/week-7/capstone project/home.html
+++ b/week-7/capstone project/home.html
@@ -19,7 +19,8 @@
                     <li><a href="home.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="products.html">Products</a></li>
-                </ul>
+                    <li><a href="contact.html">contact</a></li>
+             </ul>
             </nav>
         </div>
     </div>
@@ -39,7 +40,7 @@
                 <h2>Become a loyal Customer</h2>
                 <form>
                     <div class="form-control">
-                        <input type="text" name="name" placeholder="Name">
+                        <input type="text" name="name" placeholder="First and Last name">
                     </div>
                     <div class="form-control">
                         <input type="text" name="address" placeholder="Address">
