--- a/week-7/capstone project/about.html
+++ b/week-7/capstone project/about.html
@@ -19,6 +19,8 @@
                     <li><a href="home.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="products.html">Products</a></li>
+                    <li><a href="contact.html">contact</a></li>
+
                 </ul>
             </nav>
         </div>
