--- a/week-7/capstone project/about.html
+++ b/week-7/capstone project/about.html
@@ -66,6 +66,60 @@
 
     </section>
 
+    <div class="container grid">
+        <table>
+            <H1 class="xl">We are here for you</H1>
+            <thead>
+                <tr>
+                    <th colspan="2">Hours Open</th>
+                </tr>
+                <tr>
+                    <th class="md">Day</th>
+                    <th class="md">Open</th>
+                    <th class="md">Close</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Monday</td>
+                    <td>8:00 Am</td>
+                    <td>8:00 Pm</td>
+
+                </tr>
+                <tr>
+                    <td>Tuesday</td>
+                    <td>8:00 Am</td>
+                    <td>8:00 Pm</td>
+                </tr>
+                <tr>
+                    <td>Wednesday</td>
+                    <td>8:00 Am</td>
+                    <td>8:00 Pm</td>
+                </tr>
+                <tr>
+                    <td>Tursday</td>
+                    <td>8:00 Am</td>
+                    <td>8:00 Pm</td>
+                </tr>
+                <tr>
+                    <td>Friday</td>
+                    <td>8:00 Am</td>
+                    <td>8:00 Pm</td>
+                </tr>
+                <tr>
+                    <td>Saturday</td>
+                    <td>8:00 Am</td>
+                    <td>8:00 Pm</td>
+                </tr>
+                <tr>
+                    <td>Sunday</td>
+                    <td>8:00 Am</td>
+                    <td>8:00 Pm</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 
     <!-- footer -->
     <footer class="footer bg-dark py-5">
