--- a/week-7/capstone project/about.html
+++ b/week-7/capstone project/about.html
@@ -20,6 +20,8 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="contact.html">contact</a></li>
+                    <li><a href="SHEMA.html">shema</a></li>
+
 
                 </ul>
             </nav>
